Fix layout bugs, add nav-bar

--- a/src/components/Layout/Sidebar/styles.scss
+++ b/src/components/Layout/Sidebar/styles.scss
@@ -1,10 +1,17 @@
 .side-nav {
   width: 5rem;
   height: 100vh;
+  position: fixed;
+  top: 0px;
   .nav-text {
     flex-grow: 1;
     font-size: 10px;
     line-height: 16px;
     color: #ffffff;
+  }
+  li:hover {
+    cursor: pointer;
+    background: #132142;
+    border-left: 2px solid white;
   }
 }
