--- a/src/styles/Layout/_globals.scss
+++ b/src/styles/Layout/_globals.scss
@@ -1,3 +1,8 @@
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .full-center {
   display: flex;
   justify-content: center;
