--- a/src/styles/Layout/_text.scss
+++ b/src/styles/Layout/_text.scss
@@ -66,3 +66,7 @@
 .text-blue {
   color: $blue !important;
 }
+
+.text-right {
+  text-align: right;
+}
